T03 - Layout Add Contact

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Contacts">
         <activity
+            android:name=".activity.ContactAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.StudentsActivity"
             android:exported="false" />
         <activity
