T11 - Import, Export File JSON

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.datlx.contacts">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +16,6 @@
         android:theme="@style/Theme.Contacts">
         <activity
             android:name=".activity.ContactAddActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.StudentsActivity"
             android:exported="false" />
         <activity
             android:name=".activity.ContactsActivity"
