T05 Activity Edit Contact

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Contacts">
         <activity
+            android:name=".activity.ContactEditActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ContactAddActivity"
             android:exported="false" />
         <activity
